Changed jooq code generation to use jooq generator instead from the vertx-jooq-generate